--- a/config/3sources.yaml
+++ b/config/3sources.yaml
@@ -1,7 +1,7 @@
 #tuner
-max_trials: 250 #最大实验次数
-executions_per_trial: 5 #每次实验(每个配置)执行几遍，减少误差
-best_trial: 20 #获得最优超参数后，使用超参数执行几次来获得实验数据
+tuner_monitor: val_metric_acc #调优监控指标
+tuner_n_trials: 30 #调优次数
+best_trial: 10 #获得最优超参数后，使用超参数执行几次来获得实验数据
 best_trial_save_dir: best/ #最优超参数实验数据存储目录
 
 #data
@@ -17,13 +17,13 @@ model_class_args:
 model_args: #模型参数                            #
   nlayer:
     type: int
-    min: 2
-    max: 64
+    low: 2
+    high: 64
     step: 2
   hid_dim:
     type: int
-    min: 16
-    max: 128
+    low: 16
+    high: 128
     step: 8
   alpha: 0.1 #h0
   lamda: 0.5 #每层的beta为lamda/l(第几层)
@@ -39,15 +39,16 @@ optimizer_args:
 weight_decay1: 0.01
 weight_decay2: 5.0e-4
 
-#scheduler_class_args:
-#  module_path: torch.optim.lr_scheduler
-#  class_name: ReduceLROnPlateau
-#scheduler_args:
-#  mode: min
-#  factor: 0.3
-#  patience: 10
-#  min_lr: 1.0e-8
-#  verbose: False
+scheduler_class_args:
+  module_path: torch.optim.lr_scheduler
+  class_name: ReduceLROnPlateau
+scheduler_args:
+  mode: min
+  factor: 0.3
+  patience: 10
+  min_lr: 1.0e-8
+  verbose: False
+scheduler_monitor: val_loss
 
 
 
