--- a/config/3sources.yaml
+++ b/config/3sources.yaml
@@ -1,6 +1,6 @@
 #tuner
-tuner_monitor: val_metric_acc #调优监控指标
-tuner_n_trials: 30 #调优次数
+tuner_monitor: val_metric_f1 #调优监控指标
+tuner_n_trials: 250 #调优次数
 best_trial: 10 #获得最优超参数后，使用超参数执行几次来获得实验数据
 best_trial_save_dir: best/ #最优超参数实验数据存储目录
 
