--- a/config/NGs.yaml
+++ b/config/NGs.yaml
@@ -1,6 +1,7 @@
 #tuner
-tuner_monitor: val_metric_f1 #调优监控指标
+tuner_monitor: val_metric_acc #调优监控指标
 tuner_n_trials: 250 #调优次数
+tuner_n_repeats: 5 #每次实验(每个配置)执行几遍，减少误差
 best_trial: 10 #获得最优超参数后，使用超参数执行几次来获得实验数据
 best_trial_save_dir: best/ #最优超参数实验数据存储目录
 
