--- a/config/3sources.yaml
+++ b/config/3sources.yaml
@@ -8,7 +8,11 @@ best_trial_save_dir: best/ #最优超参数实验数据存储目录
 #data
 dataset_args:
   mat_path: data/3sources.mat                   #
-  topk: 10 #knn前几个节点
+  topk:  #knn前几个节点
+    type: int
+    low: 6
+    high: 100
+    log: True
   train_ratio: 0.1 #训练集标记率
 
 #model
@@ -27,7 +31,10 @@ model_args: #模型参数                            #
     high: 128
     step: 8
   alpha: 0.1 #h0
-  lamda: 0.5 #每层的beta为lamda/l(第几层)
+  lamda:
+    type: float
+    low: 0.3
+    high: 0.7 #每层的beta为lamda/l(第几层)
   dropout: 0.5
   layerclass: GCNIILayer #GCNII_star_Layer 有两种GCNII层
 
